--- a/bin/main/templates/movie/search.html
+++ b/bin/main/templates/movie/search.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>영화 검색 페이지</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -11,13 +11,14 @@
 
 <script>
 $(document).ready(()=>{
-	$("#btn-search").on("click",()=>{
+	function getSearch() {
 		let search = $("#search-bar").val();
 		if(search != undefined && search != ""){
 			$.ajax({
 				type:"get",
 				url:"https://api.themoviedb.org/3/search/movie?api_key=a1c25fa7fbd7117d8d4d73bf1892deae&query="+search+"&language=ko",
 				success:(response)=>{
+					$("body").css('background','black');
 					let resultArray = response.results;
 					$("#search-list").empty();
 					if(resultArray.length==0){
@@ -31,7 +32,7 @@ $(document).ready(()=>{
 							let releaseDate = resultArray[i].release_date;
 							temp_html +=`<div class="my-3 text-center img-container">
 											<a href="/movie/detail?movieId=${movieId}" class="img-wrapper d-block"><img src="${poster}"></a>
-											<a href="/movie/detail?movieId=${movieId}" class="text-decoration-none clamp">${title}</a>
+											<a href="/movie/detail?movieId=${movieId}" class="text-decoration-none clamp movieTitle">${title}</a>
 										</div>`;
 						}
 						temp_html += `</tbody>`;
@@ -44,6 +45,15 @@ $(document).ready(()=>{
 				}
 			});
 		}
+	}
+	$("#search-bar").keyup((e)=>{
+		if(e.keyCode==13)
+			getSearch();
+	})
+	
+	
+	$("#btn-search").on("click",()=>{
+		getSearch();
 	})
 })
 </script>
