--- a/src/main/resources/templates/kobis/rank_list_try.html
+++ b/src/main/resources/templates/kobis/rank_list_try.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
@@ -169,7 +169,7 @@
 				<hr class="mt-5">
 				<br>
 				<div id="kobisList" class="text-center ">
-					<!-- 리스트 출력 -->
+					리스트 출력
 				</div>
 
 			</div>
@@ -178,4 +178,4 @@
 	</main>
 
 </body>
-</html>
+</html> -->
