리뷰 작성 수정

--- a/bin/main/static/css/movieRec.css
+++ b/bin/main/static/css/movieRec.css
@@ -150,3 +150,11 @@ star-input>.input.focus{
 	text-align:right; 
 	vertical-align:middle;
 }
+
+.clamp {
+	width:inherit;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+    overflow: hidden;
+}
