--- a/bin/main/templates/movie/reviewDetail.html
+++ b/bin/main/templates/movie/reviewDetail.html
@@ -47,7 +47,7 @@
 				$("#review-box").empty();
 				let temp_html = `<div class="row g-3 mt-5">
             	<div class="col-sm-6 d-flex justify-content-center">
-            		<img src="${poster}" width="250px">
+            	<a href="/movie/detail?movieId=${movieId}"><img src="${poster}" width="250px"></a>
             	</div>
                 <div class="col-sm-6 ">
                 	<div class="p-0 form-floating">
