--- a/src/main/resources/templates/movie/detail.html
+++ b/src/main/resources/templates/movie/detail.html
@@ -179,7 +179,7 @@ $(document).ready(()=>{
 				                  	</span>
 				                  	<span class="score text-black"><span id="score">0</span>점</span>
 				                </div>
-				                <textarea id="content" name="content" rows=8 class="form-control my-3" placeholder="리뷰를 작성해주세요"></textarea>
+				                <textarea id="content" name="content" rows=8 class="form-control my-3" placeholder="리뷰를 작성해주세요" required></textarea>
 				                <div class="d-flex justify-content-end">
 				                	<button type="submit" class="btn btn-success">등록하기</button>
 				                </div>
