--- a/bin/main/templates/movie/recommend.html
+++ b/bin/main/templates/movie/recommend.html
@@ -18,20 +18,15 @@
                 <button type="button" data-bs-target="#div-carousel" data-bs-slide-to="1"></button>
                 <button type="button" data-bs-target="#div-carousel" data-bs-slide-to="2"></button>
                 <button type="button" data-bs-target="#div-carousel" data-bs-slide-to="3"></button>
+                <button type="button" data-bs-target="#div-carousel" data-bs-slide-to="4"></button>
             </div>
             <!-- 슬라이더 -->
             <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img th:src="@{/images/mvimg1.jpg}" alt="" class="d-block">
+            	<div class="carousel-item active" th:each="item, num : ${reviewRecList}" th:if="${num.first}">
+                    <img th:src="${item.poster}" class="d-block">
                 </div>
-                <div class="carousel-item">
-                    <img th:src="@{/images/mvimg2.jpg}" alt="" class="d-block">
-                </div>
-                <div class="carousel-item">
-                    <img th:src="@{/images/mvimg3.jpg}" alt="" class="d-block">
-                </div>
-                <div class="carousel-item">
-                    <img th:src="@{/images/mvimg4.jpg}" alt="" class="d-block">
+                <div class="carousel-item" th:each="item, num : ${reviewRecList}"  th:unless="${num.first}">
+                    <img th:src="${item.poster}" class="d-block">
                 </div>
             </div>
             <!-- 컨트롤 -->
