--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -97,6 +97,20 @@
     background:url(../images/x-mark.png) 0 0 / 20px 20px no-repeat;
 	}
 	
+	.checkIconPwC{
+	display:inline-block;
+	width:20px;
+	height:20px;
+	background:url(../images/check-mark.png) 0 0 / 20px 20px no-repeat;
+	}
+	
+	.xMarkPwC{
+	display:inline-block;
+	width:20px;
+	height:20px;
+    background:url(../images/x-mark.png) 0 0 / 20px 20px no-repeat;
+	}
+	
 	input:focus{
 		outline:none;
 	}
@@ -114,4 +128,18 @@
 		background-color:white;
 		padding:10px;
 	}
+	
+		#password-input-box{
+		border:1px solid rgba(154, 151, 161, 0.2);
+		background-color:white;
+		padding:10px;
+	}
+	
+		#password-check-box{
+		border-radius: 0px 0px 4px 4px;
+		border:1px solid rgba(154, 151, 161, 0.2);
+		background-color:white;
+		padding:10px;
+	}
+	
 	
